# Incident-management-system

./: .gitignore  Incident-management-system.pem  LIBRARY_README.md  app.py  cloud_services.py  config.py  models.py  pyproject.toml  readme.txt  requirements.txt
.github/workflows/: deploy.yml
docs/: architecture-diagram.md  assignment-analysis.md  report-outline.md
incident_utils/: __init__.py  analytics.py  priority.py  sla.py
instance/: incident.db  incidents.db
static/: style.css
templates/: base.html  create.html  index.html  login.html  update.html
